{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 157,
  "lineage": "0dae8884-946a-9526-ddf4-e1b3e0482401",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdf0854a3c3a95eb",
            "association_id": "eipassoc-03a139b151d2e6c9d",
            "domain": "vpc",
            "id": "eipalloc-0bdf0854a3c3a95eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06a8c714a9455874b",
            "private_dns": "ip-10-0-0-230.ec2.internal",
            "private_ip": "10.0.0.230",
            "public_dns": "ec2-54-88-64-4.compute-1.amazonaws.com",
            "public_ip": "54.88.64.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:internet-gateway/igw-08dbd77a12a680b1d",
            "id": "igw-08dbd77a12a680b1d",
            "owner_id": "177108100300",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0864239ca25523bdd-IG!",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0864239ca25523bdd-IG!",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:loadbalancer/app/ext-alb/f3f867477bc6aac7",
            "arn_suffix": "app/ext-alb/f3f867477bc6aac7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-372967829.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:loadbalancer/app/ext-alb/f3f867477bc6aac7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-0d78df2d52c998e56"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040747df98506849f"
              },
              {
                "subnet_id": "subnet-06d90927d2a40c68e"
              }
            ],
            "subnets": [
              "subnet-040747df98506849f",
              "subnet-06d90927d2a40c68e"
            ],
            "tags": {
              "Name": "ext-alb"
            },
            "tags_all": {
              "Name": "ext-alb"
            },
            "vpc_id": "vpc-0864239ca25523bdd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "int-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:loadbalancer/app/int-alb/5b330fe06eb37994",
            "arn_suffix": "app/int-alb/5b330fe06eb37994",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-int-alb-875233471.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:loadbalancer/app/int-alb/5b330fe06eb37994",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "int-alb",
            "security_groups": [
              "sg-0b061e1e94def0fed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0070d70fd68b0328a"
              },
              {
                "subnet_id": "subnet-0f9f2a7a9a896ca0b"
              }
            ],
            "subnets": [
              "subnet-0070d70fd68b0328a",
              "subnet-0f9f2a7a9a896ca0b"
            ],
            "tags": {
              "Name": "int-alb"
            },
            "tags_all": {
              "Name": "int-alb"
            },
            "vpc_id": "vpc-0864239ca25523bdd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener/app/ext-alb/f3f867477bc6aac7/01bc88722eaecc6b",
            "certificate_arn": "arn:aws:acm:us-east-1:177108100300:certificate/397ae945-6578-4689-889a-f57438b31e53",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/nginx-tgt/9b0664d427ff9264",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener/app/ext-alb/f3f867477bc6aac7/01bc88722eaecc6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:loadbalancer/app/ext-alb/f3f867477bc6aac7",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.dentitoxprogold",
            "aws_acm_certificate_validation.dentitoxprogold",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.dentitoxprogold",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.dentitoxprogold"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener/app/int-alb/5b330fe06eb37994/dedb4637491a6412",
            "certificate_arn": "arn:aws:acm:us-east-1:177108100300:certificate/397ae945-6578-4689-889a-f57438b31e53",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/wordpress-tgt/b02a496c31f97496",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener/app/int-alb/5b330fe06eb37994/dedb4637491a6412",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:loadbalancer/app/int-alb/5b330fe06eb37994",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.dentitoxprogold",
            "aws_acm_certificate_validation.dentitoxprogold",
            "aws_lb.int-alb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.dentitoxprogold",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.dentitoxprogold"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/tooling-tgt/8da5c559ec5f6241",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener-rule/app/int-alb/5b330fe06eb37994/dedb4637491a6412/0afdded456867f70",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.dentitoxprogold.us"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener-rule/app/int-alb/5b330fe06eb37994/dedb4637491a6412/0afdded456867f70",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:listener/app/int-alb/5b330fe06eb37994/dedb4637491a6412",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.dentitoxprogold",
            "aws_acm_certificate_validation.dentitoxprogold",
            "aws_lb.int-alb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.dentitoxprogold",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.dentitoxprogold"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/nginx-tgt/9b0664d427ff9264",
            "arn_suffix": "targetgroup/nginx-tgt/9b0664d427ff9264",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/nginx-tgt/9b0664d427ff9264",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/tooling-tgt/8da5c559ec5f6241",
            "arn_suffix": "targetgroup/tooling-tgt/8da5c559ec5f6241",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/tooling-tgt/8da5c559ec5f6241",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/wordpress-tgt/b02a496c31f97496",
            "arn_suffix": "targetgroup/wordpress-tgt/b02a496c31f97496",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:177108100300:targetgroup/wordpress-tgt/b02a496c31f97496",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdf0854a3c3a95eb",
            "connectivity_type": "public",
            "id": "nat-0e0703b49114c126f",
            "network_interface_id": "eni-06a8c714a9455874b",
            "private_ip": "10.0.0.230",
            "public_ip": "54.88.64.4",
            "subnet_id": "subnet-040747df98506849f",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "emeka.madusha@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e2a872e22d742b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e0703b49114c126f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e2a872e22d742b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08dbd77a12a680b1d",
            "id": "r-rtb-098764e2d79ca952b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098764e2d79ca952b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:route-table/rtb-05e2a872e22d742b8",
            "id": "rtb-05e2a872e22d742b8",
            "owner_id": "177108100300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0703b49114c126f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PRIVATE-ROUTE-TABLE-DEV",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PRIVATE-ROUTE-TABLE-DEV",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:route-table/rtb-098764e2d79ca952b",
            "id": "rtb-098764e2d79ca952b",
            "owner_id": "177108100300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08dbd77a12a680b1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PUBLIC-ROUTE-TABLE-DEV",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PUBLIC-ROUTE-TABLE-DEV",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e74ece01a55950df",
            "route_table_id": "rtb-05e2a872e22d742b8",
            "subnet_id": "subnet-0f9f2a7a9a896ca0b"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b6501e7aac1f057",
            "route_table_id": "rtb-05e2a872e22d742b8",
            "subnet_id": "subnet-0070d70fd68b0328a"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c6d05af1dcb727",
            "route_table_id": "rtb-05e2a872e22d742b8",
            "subnet_id": "subnet-08b61e05d2e5f6dc7"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6d9d95862e66ff9",
            "route_table_id": "rtb-05e2a872e22d742b8",
            "subnet_id": "subnet-0fdbef25c396c1e01"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030cd8ccc58d6c7c2",
            "route_table_id": "rtb-098764e2d79ca952b",
            "subnet_id": "subnet-040747df98506849f"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ba99932ac9d686",
            "route_table_id": "rtb-098764e2d79ca952b",
            "subnet_id": "subnet-06d90927d2a40c68e"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:security-group/sg-0c313cb3cbfda45c6",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c313cb3cbfda45c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "177108100300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:security-group/sg-0be08a41c5645e4d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be08a41c5645e4d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d69a4bb42c5e5c"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d69a4bb42c5e5c",
                  "sg-0c313cb3cbfda45c6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "177108100300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:security-group/sg-0d78df2d52c998e56",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d78df2d52c998e56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "177108100300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:security-group/sg-0b061e1e94def0fed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b061e1e94def0fed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e272220d09da4a2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "177108100300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:security-group/sg-02e272220d09da4a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e272220d09da4a2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c313cb3cbfda45c6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d78df2d52c998e56"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "177108100300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:security-group/sg-0c0d69a4bb42c5e5c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0d69a4bb42c5e5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c313cb3cbfda45c6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b061e1e94def0fed"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "177108100300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1160938003",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e272220d09da4a2",
            "self": false,
            "source_security_group_id": "sg-0c313cb3cbfda45c6",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3413073605",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b061e1e94def0fed",
            "self": false,
            "source_security_group_id": "sg-02e272220d09da4a2",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-896449877",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0be08a41c5645e4d1",
            "self": false,
            "source_security_group_id": "sg-0c313cb3cbfda45c6",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-901719164",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0be08a41c5645e4d1",
            "self": false,
            "source_security_group_id": "sg-0c0d69a4bb42c5e5c",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2792994038",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0be08a41c5645e4d1",
            "self": false,
            "source_security_group_id": "sg-0c0d69a4bb42c5e5c",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1366978722",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e272220d09da4a2",
            "self": false,
            "source_security_group_id": "sg-0d78df2d52c998e56",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1626498556",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0d69a4bb42c5e5c",
            "self": false,
            "source_security_group_id": "sg-0b061e1e94def0fed",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1997597246",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c0d69a4bb42c5e5c",
            "self": false,
            "source_security_group_id": "sg-0c313cb3cbfda45c6",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:subnet/subnet-0f9f2a7a9a896ca0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9f2a7a9a896ca0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177108100300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:subnet/subnet-0070d70fd68b0328a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0070d70fd68b0328a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177108100300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:subnet/subnet-08b61e05d2e5f6dc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b61e05d2e5f6dc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177108100300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:subnet/subnet-0fdbef25c396c1e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdbef25c396c1e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177108100300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:subnet/subnet-040747df98506849f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040747df98506849f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177108100300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:subnet/subnet-06d90927d2a40c68e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d90927d2a40c68e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177108100300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "vpc_id": "vpc-0864239ca25523bdd"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177108100300:vpc/vpc-0864239ca25523bdd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a16749fdad85306",
            "default_route_table_id": "rtb-07d51865b09e18c2b",
            "default_security_group_id": "sg-05f93efb86106f8d8",
            "dhcp_options_id": "dopt-05f056995ff1c0638",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0864239ca25523bdd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d51865b09e18c2b",
            "owner_id": "177108100300",
            "tags": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "emeka.madusha@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "177108100300",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "emeka.madusha@gmail.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}